# Nmap Changelog ($Id$); -*-text-*-

o Fixed a bug which caused Nmap to infer an improper distance against
  some hosts when performaing OS detection against a group whose
  distance varies between members. [David, Fyodor]

o Added a new NSE OpenSSL library with functions for multiprecision
  integer arithmetics, hashing, HMAC, symmetric encryption and symmetric
  decryption. [Sven]

o [Zenmap] Host information windows are now like any other windows,
  and will not become unclosable by having their controls offscreen.
  Thanks to Robert Mead for the bug report.

o showHTMLTitle.nse can now follow (non-standard) relative redirects,
  and may do a DNS lookup to find if the redirected-to host has the
  same IP address as the scanned host. [Jah]

o Enhanced the tohex() function in the NSE stdnse library to support strings
  and added options to control the formatting. [Sven]

o The http NSE module tries to deal with non-standards-compliant HTTP
  traffic, particularly responses in which the header fields are
  separated by plain LF rather than CRLF. [Jah, Sven]

o [Zenmap] The help function now properly converts the pathname of the
  local help file to a URL, for better compatibility with different
  web browsers. [David]
  This should fix the crash
  WindowsError: [Error 2] The system cannot find the file specified:
  'file://C:\\Program Files\\Nmap\\zenmap\\share\\zenmap\\docs\\help.html'

o The HTTP_open_proxy.nse script is updated to match Google Web
  Server's changed header field: "Server: gws" instead of
  "Server: GWS/".  [Vlatko Kosturjak]

o Enhanced the ssh service detection signatures to properly
  detect protocol version 2 services. [Matt Selsky]

o [Zenmap] Nmap output is automatically scrolled. [David]

o Reduced memory consumption for some longer running scans by removing
  completed hosts from the lists after two minutes.  These hosts are
  kept around in case there is a late response, but this draws the